--- a/scally/db.yml
+++ b/scally/db.yml
@@ -1,17 +1,164 @@
 scales:
+
   - # -----------------------------
-   names: [Major, Ionian]
+   name: [natural major, major, ionian]
+   category: natural
    degrees: 1 2 3 4 5 6 7
 
   - # -----------------------------
-   name: Whole-half
-   degrees: '1 2 b3 4 #4 #5 6 7'
+   name: dorian
+   category: natural
+   degrees: 1 2 b3 4 5 6 b7
 
   - # -----------------------------
-   names: [Lydian]
+   name: phrygian
+   category: natural
+   degrees: '1 b2 b3 4 5 b6 b7'
+
+  - # -----------------------------
+   name: lydian
+   category: natural
    degrees: '1 2 3 #4 5 6 7'
 
-chords:
   - # -----------------------------
-   names: [maj7, M7]
+   name: mixolydian
+   category: natural
+   degrees: '1 2 3 4 5 6 b7'
+
+  - # -----------------------------
+   name: [minor, natural minor, aeolian]
+   category: natural
+   degrees: '1 2 b3 4 5 b6 b7'
+
+  - # -----------------------------
+   name: locrian
+   category: natural
+   degrees: '1 b2 b3 4 b5 b6 b7'
+
+#-----------------------------------------------------------
+# HARMONIC
+#-----------------------------------------------------------
+
+  - # -----------------------------
+   name: harmonic minor
+   category: harmonic-minor
+   degrees: '1 2 b3 4 5 b6 7'
+
+
+  - # -----------------------------
+   name: [locrian becar 6, Harmonic Minor Mode II, 'Locrian #6']
+   category: harmonic-minor
+   degrees:  '1 b2 b3 4 b5 6 b7'
+
+
+  - # -----------------------------
+   name: [Ionian Augmented, 'Ionian #5']
+   category: harmonic-minor
+   degrees:  '1 2 3 4 #5 6 7'
+
+
+  - # -----------------------------
+   name: [Overtone Minor, 'Dorian #4', 'ukainian dorian']
+   category: harmonic-minor
+   degrees:  '1 2 b3 #4 5 6 b7'
+
+
+  - # -----------------------------
+   name: [Phrygian Major, Spanish, Jewish]
+   category: harmonic-minor
+   degrees:  '1 b2 3 4 5 b6 b7'
+
+
+  - # -----------------------------
+   name: ['Lydian #2', 'lydian #9']
+   category: harmonic-minor
+   degrees:  '1 #2 3 #4 5 6 7'
+
+
+  - # -----------------------------
+   name: [Altered bb7, Super Locrian bb7, Altered n6]
+   category: harmonic-minor
+   degrees:  '1 b2 b3 b4 b5 b6 bb7'
+
+  - # -----------------------------
+   name: [Hungarian minor]
+   category: harmonic-minor
+   degrees:  '1 2 b3 #4 5 b6 7'
+
+#-----------------------------------------------------------
+# MELODIC
+#-----------------------------------------------------------
+
+  - # -----------------------------
+   name: [melodic minor]
+   category: melodic-minor
+   degrees:  **1 2 b3 4 5 6 7**
+
+  - # -----------------------------
+   name: [Phrygian n6, Dorian b2]
+   category: melodic-minor
+   degrees:  **1 b2 b3 4 5 6 b7**
+
+  - # -----------------------------
+   name: [Lydian Augmented]
+   category: melodic-minor
+   degrees:  **1-2-3-#4-#5-6-7**
+
+  - # -----------------------------
+   name: [Lydian dominant, Lydian b7, 'Mixolydian #4', Overtone scale]
+   category: melodic-minor
+   degrees:  **1 2 3 #4 5 6 b7**
+
+  - # -----------------------------
+   name: [Myxolydian b6, Hindu, Aeolian Major]
+   category: melodic-minor
+   degrees:  **1 2 3 4 5 b6 b7**
+
+  - # -----------------------------
+   name: [Locrian n2, Aeolian b5 'Half-Diminished #2']
+   category: melodic-minor
+   degrees:  **1 2 b3 4 b5 b6 b7**
+
+
+  - # -----------------------------
+   name: [Altered scale, Diminished Whole Tone Altered Dominant, Pomeroy, Ravel]
+   category: melodic-minor
+   degrees:  **1 b2 b3 b4 b5 b6 b7**
+
+#-----------------------------------------------------------
+# DIMINISHED
+#-----------------------------------------------------------
+
+  - # -----------------------------
+   name: [Whole-Half]
+   category: diminished
+   degrees:  **1 2 b3 4 #4 #5 6 7**
+
+
+  - # -----------------------------
+   name: [Half-Whole ]
+   category: diminished
+   degrees:  '1 b2 b3 3 #4 5 6 b7'
+
+
+  - # -----------------------------
+   name: [Whole Tone]
+   category: diminished
+   degrees:  '1 2 3 #4 #5 b7'
+
+#-----------------------------------------------------------
+#-----------------------------------------------------------
+#-----------------------------------------------------------
+# CHORDS
+#-----------------------------------------------------------
+#-----------------------------------------------------------
+#-----------------------------------------------------------
+
+chords:
+  -
+   name: maj
+   degrees: 1-3-5
+
+  -
+   name: [maj7, M7]
    degrees: 1-3-5-7
