--- a/scally/db.yml
+++ b/scally/db.yml
@@ -115,7 +115,7 @@ scales:
    degrees:  '1 2 3 4 5 b6 b7'
 
   - # -----------------------------
-   name: [locrian n2, aeolian b5 'half-diminished #2']
+   name: [locrian n2, aeolian b5, 'half-diminished #2']
    category: melodic-minor
    degrees:  '1 2 b3 4 b5 b6 b7'
 
