--- a/scally/default_lib.yml
+++ b/scally/default_lib.yml
@@ -1,3 +1,10 @@
+instruments:
+  - # -----------------------------
+   name: [guitar, standart guitar]
+   tune: [E2, A2, D3, G3, B3, E4]
+   length: 24
+
+  
 scales:
 
   - # -----------------------------
@@ -78,7 +85,7 @@ scales:
   - # -----------------------------
    name: [altered bb7, super locrian bb7, altered n6]
    category: harmonic-minor
-   degrees:  '1 b2 b3 b4 b5 b6 bb7'
+   degrees:  '1 b2 b3 b4 b5 b6 6'
 
   - # -----------------------------
    name: [hungarian minor]
@@ -159,14 +166,85 @@ chords:
    name: maj
    degrees: 1-3-5
 
-  -
+  - # -----------------------------
    name: [maj7, M7]
    degrees: 1-3-5-7
 
-  -
-   name: [Cmaj7#5, maj7+, +7+5]
-   degrees: 1-3-#5-7
+  # - # -----------------------------
+  #  name: ['Cmaj7#5', maj7+, +7+5]
+  #  degrees: '1-3-#5-7'
 
-  -
-   name: [Cmaj7#5, maj7+, +7+5]
-   degrees: 1-3-#5-7
+  # - # -----------------------------
+  #  name: ['Cmaj7#5', maj7+, +7+5]
+  #  degrees: '1-3-#5-7'
+
+  # - # -----------------------------
+  #  name: ['maj7#11']
+  #  degrees: '1-3-5-7-#11'
+
+  # - # -----------------------------
+  #  name: [maj7b5, maj7-]
+  #  degrees: 1-3-b5-7
+
+  # - # -----------------------------
+  #  name: [maj9, M9, maj7(9)]
+  #  degrees: 1-3-5-7-9
+
+  # - # -----------------------------
+  #  name: ['maj9#11', 'maj7(9, #11)']
+  #  degrees: '1-3-5-7-9-#11'
+
+  # - # -----------------------------
+  #  name: [maj11, M11]
+  #  degrees: '1-3-5-7-9-11'
+
+  # - # -----------------------------
+  #  name: [maj13, M13]
+  #  degrees: '1-3-5-7-9-13'
+
+  # - # -----------------------------
+  #  name: ['maj13#11', 'maj7(13, #11)', 'maj9(#11, 13)']
+  #  degrees: '1-3-5-7-9-#11-13'
+
+  # - # -----------------------------
+  #  name: [sus2]
+  #  degrees: '1-2-5'
+
+  # - # -----------------------------
+  #  name: [sus2sus4]
+  #  degrees: '1-2-4-5'
+
+  # - # -----------------------------
+  #  name: [sus4, sus]
+  #  degrees: '1-4-5'
+
+  # - # -----------------------------
+  #  name: [sus4(b9b13)]
+  #  degrees: '1-4-5-b9-b13'
+
+  # - # -----------------------------
+  #  name: [sus4(b9)]
+  #  degrees: '1-4-5-b9'
+
+  # - # -----------------------------
+  #  name: [6, M6, maj6, add6]
+  #  degrees: '1-3-5-6'
+
+  # - # -----------------------------
+  #  name: [C6/9, 6add9, add6/9]
+  #  degrees: '1-3-5-6-9'
+
+  # - # -----------------------------
+  #  name: ['C6/9#11']
+  #  degrees: '1-3-5-6-9-#11'
+
+
+  # - # -----------------------------
+  #  name: [Cadd9]
+  #  degrees: '1-3-5-9'
+
+  # - # -----------------------------
+  #  name: [C7]
+  #  degrees: '1-3-5-b7'
+
+
