--- a/scally/default_lib.yml
+++ b/scally/default_lib.yml
@@ -170,81 +170,256 @@ chords:
    name: [maj7, M7]
    degrees: 1-3-5-7
 
-  # - # -----------------------------
-  #  name: ['Cmaj7#5', maj7+, +7+5]
-  #  degrees: '1-3-#5-7'
+  - # -----------------------------
+   name: ['Cmaj7#5', maj7+, +7+5]
+   degrees: '1-3-#5-7'
 
-  # - # -----------------------------
-  #  name: ['Cmaj7#5', maj7+, +7+5]
-  #  degrees: '1-3-#5-7'
+  - # -----------------------------
+   name: ['Cmaj7#5', maj7+, +7+5]
+   degrees: '1-3-#5-7'
 
-  # - # -----------------------------
-  #  name: ['maj7#11']
-  #  degrees: '1-3-5-7-#11'
+  - # -----------------------------
+   name: ['maj7#11']
+   degrees: '1-3-5-7-#11'
 
-  # - # -----------------------------
-  #  name: [maj7b5, maj7-]
-  #  degrees: 1-3-b5-7
+  - # -----------------------------
+   name: [maj7b5, maj7-]
+   degrees: 1-3-b5-7
 
-  # - # -----------------------------
-  #  name: [maj9, M9, maj7(9)]
-  #  degrees: 1-3-5-7-9
+  - # -----------------------------
+   name: [maj9, M9, maj7(9)]
+   degrees: 1-3-5-7-9
 
-  # - # -----------------------------
-  #  name: ['maj9#11', 'maj7(9, #11)']
-  #  degrees: '1-3-5-7-9-#11'
+  - # -----------------------------
+   name: ['maj9#11', 'maj7(9, #11)']
+   degrees: '1-3-5-7-9-#11'
 
-  # - # -----------------------------
-  #  name: [maj11, M11]
-  #  degrees: '1-3-5-7-9-11'
+  - # -----------------------------
+   name: [maj11, M11]
+   degrees: '1-3-5-7-9-11'
 
-  # - # -----------------------------
-  #  name: [maj13, M13]
-  #  degrees: '1-3-5-7-9-13'
+  - # -----------------------------
+   name: [maj13, M13]
+   degrees: '1-3-5-7-9-13'
 
-  # - # -----------------------------
-  #  name: ['maj13#11', 'maj7(13, #11)', 'maj9(#11, 13)']
-  #  degrees: '1-3-5-7-9-#11-13'
+  - # -----------------------------
+   name: ['maj13#11', 'maj7(13, #11)', 'maj9(#11, 13)']
+   degrees: '1-3-5-7-9-#11-13'
 
-  # - # -----------------------------
-  #  name: [sus2]
-  #  degrees: '1-2-5'
+  - # -----------------------------
+   name: [sus2]
+   degrees: '1-2-5'
 
-  # - # -----------------------------
-  #  name: [sus2sus4]
-  #  degrees: '1-2-4-5'
+  - # -----------------------------
+   name: [sus2sus4]
+   degrees: '1-2-4-5'
 
-  # - # -----------------------------
-  #  name: [sus4, sus]
-  #  degrees: '1-4-5'
+  - # -----------------------------
+   name: [sus4, sus]
+   degrees: '1-4-5'
 
-  # - # -----------------------------
-  #  name: [sus4(b9b13)]
-  #  degrees: '1-4-5-b9-b13'
+  - # -----------------------------
+   name: [sus4(b9b13)]
+   degrees: '1-4-5-b9-b13'
 
-  # - # -----------------------------
-  #  name: [sus4(b9)]
-  #  degrees: '1-4-5-b9'
+  - # -----------------------------
+   name: [sus4(b9)]
+   degrees: '1-4-5-b9'
 
-  # - # -----------------------------
-  #  name: [6, M6, maj6, add6]
-  #  degrees: '1-3-5-6'
+  - # -----------------------------
+   name: ['6', M6, maj6, add6]
+   degrees: '1-3-5-6'
 
-  # - # -----------------------------
-  #  name: [C6/9, 6add9, add6/9]
-  #  degrees: '1-3-5-6-9'
+  - # -----------------------------
+   name: [6/9, 6add9, add6/9]
+   degrees: '1-3-5-6-9'
 
-  # - # -----------------------------
-  #  name: ['C6/9#11']
-  #  degrees: '1-3-5-6-9-#11'
+  - # -----------------------------
+   name: ['6/9#11']
+   degrees: '1-3-5-6-9-#11'
 
 
-  # - # -----------------------------
-  #  name: [Cadd9]
-  #  degrees: '1-3-5-9'
+  - # -----------------------------
+   name: [add9]
+   degrees: '1-3-5-9'
 
-  # - # -----------------------------
-  #  name: [C7]
-  #  degrees: '1-3-5-b7'
+  - # -----------------------------
+   name: ['7']
+   degrees: '1-3-5-b7'
+
+  - # -----------------------------
+   name: [7#5]
+   degrees: '1-3-#5-b7'
+
+  - # -----------------------------
+   name: [7b5, 7-5]
+   degrees: '1-3-b5-b7'
+
+  - # -----------------------------
+   name: [7b9, 7-9]
+   degrees: '1-3-5-b7-b9'
+
+  - # -----------------------------
+   name: [7b5b9, -5-9]
+   degrees: '1-b3-b5-b7-b9'
+
+  - # -----------------------------
+   name: [7b5#9, -5+9]
+   degrees: '1-b3-b5-b7-#9'
+
+  - # -----------------------------
+   name: [7#5b9, +5-9]
+   degrees: '1-b3-#5-b7-b9'
+
+  - # -----------------------------
+   name: [7#9#5, +5+9]
+   degrees: '1-b3-#5-b7-#9'
+
+  - # -----------------------------
+   name: [7#9, 7+9, 7b10]
+   degrees: '1-b3-#5-b7-#9'
+
+  - # -----------------------------
+   name: [7#11]
+   degrees: '1-3-5-b7-#11'
+
+  - # -----------------------------
+   name: [7sus4, 7sus]
+   degrees: '1-4-5-b7'
+
+  - # -----------------------------
+   name: [7sus4(b9), 11b9]
+   degrees: '1-5-b7-b9-11'
+
+  - # -----------------------------
+   name: ['9']
+   degrees: '1-3-5-b7-9'
+
+
+  - # -----------------------------
+   name: [9#5, '7(#5,9)', 9+5]
+   degrees: '1-3-#5-b7-9'
+
+  - # -----------------------------
+   name: [9b5 (7(b5,9), 9-5)]
+   degrees: '1-3-b5-b7-9'
+
+  - # -----------------------------
+   name: [9#11]
+   degrees: '1-3-5-b7-9-#11'
+
+  - # -----------------------------
+   name: [9sus4]
+   degrees: '1-4-5-b7-9'
+
+  - # -----------------------------
+   name: [9sus4(b13)]
+   degrees: '1-4-5-b7-9-b13'
+
+  - # -----------------------------
+   name: ['11']
+   degrees: '1-3-5-b7-9-11'
+
+  - # -----------------------------
+   name: ['13']
+   degrees: '1-3-5-b7-9-13'
+
+  - # -----------------------------
+   name: [13b9, '7(b9,13)', 13-9)]
+   degrees: '1-3-5-b7-b9-13'
+
+  - # -----------------------------
+   name: ['13#11', (13+11)]
+   degrees: '1-3-5-b7-#11-13'
+
+  - # -----------------------------
+   name: [13sus4]
+   degrees: '1-4-5-b7-13'
+
+  - # -----------------------------
+   name: [13sus4(b9)]
+   degrees: '1-4-5-b7-b9-13'
+
+  - # -----------------------------
+   name: [m, min]
+   degrees: '1-b3-5'
+
+  - # -----------------------------
+   name: [m7, min7, '-7']
+   degrees: '1-b3-5-b7'
+
+  - # -----------------------------
+   name: ['m7#5', 'm7+']
+   degrees: '1-b3-#5-b7'
+
+  - # -----------------------------
+   name: [Cm7b5, m7-5]
+   degrees: '1-b3-b5-b7'
+
+  - # -----------------------------
+   name: [mmaj7, min(maj7), mM7, m+7]
+   degrees: '1-b3-5-7'
+
+  - # -----------------------------
+   name: [mmaj9, min(maj9), mM9]
+   degrees: '1-b3-5-7-9'
+
+  - # -----------------------------
+   name: [m6, min6, m(add6), '-6']
+   degrees: '1-b3-5-6'
+
+  - # -----------------------------
+   name: [m6/9, m6add9, m(add6,9), min6/9]
+   degrees: '1-b3-5-6-9'
+
+  - # -----------------------------
+   name: [m9, min9, '-9']
+   degrees: '1-b3-5-b7-9'
+
+  - # -----------------------------
+   name: [m9(maj7)]
+   degrees: '1-b3-5-7-9'
+
+  - # -----------------------------
+   name: [m11, min11, '-11']
+   degrees: '1-b3-5-9-11'
+
+  - # -----------------------------
+   name: [m13, min13, '-13']
+   degrees: '1-b3-5-b7-9-11-13'
+
+  - # -----------------------------
+   name: [madd9, m9(no 7th)]
+   degrees: '1-b3-5-9'
+
+  - # -----------------------------
+   name: [aug, '+']
+   degrees: '1-3-#5'
+
+  - # -----------------------------
+   name: [dim]
+   degrees: '1-b3-b5'
+
+  - # -----------------------------
+   name: [dim7]
+   degrees: '1-b3-b5-b7'
+
+  - # -----------------------------
+   name: [b5/1]
+   degrees: '1-b2-#5-b7'
+
+  - # -----------------------------
+   name: ['#5/1']
+   degrees: '1-2-#5-b7'
+
+  - # -----------------------------
+   name: ['7/1']
+   degrees: '1-#2-#5-7'
+
+
+
+
+
+
 
 
