--- a/scally/default_lib.yml
+++ b/scally/default_lib.yml
@@ -8,7 +8,7 @@ instruments:
 scales:
 
   - # -----------------------------
-   name: [natural major, major, ionian]
+   name: [maj, natural major, major, ionian]
    category: natural
    degrees: 1 2 3 4 5 6 7
 
@@ -133,6 +133,15 @@ scales:
    degrees:  '1 b2 b3 b4 b5 b6 b7'
 
 #-----------------------------------------------------------
+# double harmonic major
+#-----------------------------------------------------------
+
+
+  - # -----------------------------
+   name: [double harmonic major]
+   degrees:  '1-b2-3-4-5-b6-7'
+
+#-----------------------------------------------------------
 # diminished
 #-----------------------------------------------------------
 
@@ -154,6 +163,15 @@ scales:
    degrees:  '1 2 3 #4 #5 b7'
 
 #-----------------------------------------------------------
+# augmented
+#-----------------------------------------------------------
+
+  - # -----------------------------
+   name: [augmented]
+   category: augmented
+   degrees:  '1-#2-3-5-#5-7'
+
+#-----------------------------------------------------------
 #-----------------------------------------------------------
 #-----------------------------------------------------------
 # chords
@@ -171,11 +189,11 @@ chords:
    degrees: 1-3-5-7
 
   - # -----------------------------
-   name: ['Cmaj7#5', maj7+, +7+5]
+   name: ['maj7#5', maj7+, +7+5]
    degrees: '1-3-#5-7'
 
   - # -----------------------------
-   name: ['Cmaj7#5', maj7+, +7+5]
+   name: ['maj7#5', maj7+, +7+5]
    degrees: '1-3-#5-7'
 
   - # -----------------------------
@@ -353,7 +371,7 @@ chords:
    degrees: '1-b3-#5-b7'
 
   - # -----------------------------
-   name: [Cm7b5, m7-5]
+   name: [m7b5, m7-5]
    degrees: '1-b3-b5-b7'
 
   - # -----------------------------
